create and wire up the login component. Add barreling and typescript paths for components and pages.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@components": ["src/app/components"],
+      "@pages": ["src/app/pages"]
+    }
   }
 }
