--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@components": ["src/app/components"],
-      "@pages": ["src/app/pages"]
+      "@pages": ["src/app/pages"],
+      "@mocks": ["src/app/mocks"]
     }
   }
 }
