Init buy order list page and navigate to it on successful sign up. Keep unit tests happy.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@components": ["src/app/components"],
       "@pages": ["src/app/pages"],
-      "@mocks": ["src/app/mocks"]
+      "@mocks": ["src/app/mocks"],
+      "@services": ["src/app/services"]
     }
   }
 }
