improve test coverage.

--- a/angular.json
+++ b/angular.json
@@ -115,6 +115,9 @@
                 "input": "src/assets",
                 "output": "/assets"
               }
+            ],
+            "codeCoverageExclude": [
+              "/**/*mock*.ts"
             ]
           },
           "configurations": {
