--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "buy-order-manager",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Emerson Price",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -56,5 +55,5 @@
     "tslint": "~5.17.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "A simple app for managing buy orders"
 }
